infra/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microfrontends-react
spec:
  type: LoadBalancer
  selector:
    type: microfrontends-react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
