infra/nuxtjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microfrontends-vue
spec:
  type: LoadBalancer
  selector:
    type: microfrontends-vue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
